--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,17 @@
 [package]
 name = "amalie"
+description = "Mathmatical library written for rust and python"
+authors = ["GlacierSG <iamglaciersg@gmail.com>"]
+repository = "https://github.com/GlacierSG/amalie"
+readme = "README.md"
+keywords = ["math","algebra"]
+license = "MIT"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 num = { version = "0.4.3", features = ["rand"] }
-macros = { path = "macros" }
+macros = { path = "macros", version = "0.1.0" }
 pyo3 = { version = "0.22.0", features = ["extension-module", "num-bigint"], optional = true}
 ctrlc = "3.4.4"
 rand = "0.8.5"
