--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 
 [dependencies]
 num = { version = "0.4.3", features = ["rand"] }
-macros = { path = "macros", version = "0.1.0" }
+amalie-macros = { path = "macros", version = "0.1.0" }
 pyo3 = { version = "0.22.0", features = ["extension-module", "num-bigint"], optional = true}
 ctrlc = "3.4.4"
 rand = "0.8.5"
